# ChangeLog for dev-db/phppgadmin
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/ChangeLog,v 1.28 2004/07/17 21:57:34 aliz Exp $

  11 Jul 2004; Jason Wever <weeve@gentoo.org> phppgadmin-3.4.ebuild:
  Stable on sparc.

  03 Jul 2004; Guy Martin <gmsoft@gentoo.org> phppgadmin-3.4.ebuild:
  Marked stable on hppa.

  27 Jun 2004; Masatomo Nakano <nakano@gentoo.org> phppgadmin-3.4.ebuild:
  Marked stable on x86.

*phppgadmin-3.4 (13 Jun 2004)
*phppgadmin-3.3.1-r1 (13 Jun 2004)

  13 Jun 2004; Masatomo Nakano <nakano@gentoo.org> +files/postinstall-en.txt,
  +phppgadmin-3.3.1-r1.ebuild, +phppgadmin-3.4.ebuild:
  Version bump and changing to use webapp eclass. (#52972, #51319)

  01 May 2004; Masatomo Nakano <nakano@gentoo.org> phppgadmin-3.3.1.ebuild:
  Marked as stable.

  16 Apr 2004; Guy Martin <gmsoft@gentoo.org> phppgadmin-3.3.1.ebuild:
  Marked stable on hppa.

  13 Apr 2004; Jason Wever <weeve@gentoo.org> phppgadmin-3.3.1.ebuild:
  Added ~sparc keyword.

*phppgadmin-3.3.1 (21 Mar 2004)

  21 Mar 2004; Masatomo Nakano <nakano@gentoo.org> phppgadmin-3.2.1.ebuild,
  phppgadmin-3.3.1.ebuild, phppgadmin-3.3.ebuild:
  Version bumped phppgadmin-3.3.1 and marked as stable 3.3 and removed 3.2.1.

*phppgadmin-3.3 (03 Mar 2004)

  03 Mar 2004; Martin Holzer <mholzer@gentoo.org> phppgadmin-3.3.ebuild:
  Version bumped.

  03 Mar 2004; Martin Holzer <mholzer@gentoo.org> phppgadmin-3.1.ebuild,
  phppgadmin-3.2.1.ebuild:
  moving webapp-detect into functions

*phppgadmin-3.2 (22 Dec 2003)
*phppgadmin-3.2.1 (22 Dec 2003)

  22 Dec 2003; Masatomo Nakano <nakano@gentoo.org> phppgadmin-3.2.ebuild:
  Version bump.

  15 Dec 2003; Stuart Herbert <stuart@gentoo.org> phppgadmin-3.1.ebuild:
  Fix for bug #32636

*phppgadmin-3.1 (05 Oct 2003)

  22 Oct 2003; Masatomo Nakano <nakano@gentoo.org> phppgadmin-3.1.ebuild:
  Marked as stable
