@@ -1,12 +1,8 @@
-MD5 cf321ecb1695598cad7607cdcd56e541 phppgadmin-3.3.ebuild 1710
 MD5 9884d506e62682e1d8dee14e9968364b phppgadmin-3.3.1-r1.ebuild 1434
 MD5 9ccfe915fc61b74a0bc13e740906d3a7 phppgadmin-3.4.ebuild 1423
-MD5 e64d6f777c729d2543f8560c0025e6d7 phppgadmin-3.1.ebuild 1667
 MD5 e5f978c3545ab54b87711273dd658300 phppgadmin-3.3.1.ebuild 1723
-MD5 9000734f4986ad84238b12d7cf6215d0 ChangeLog 3500
+MD5 25085e95702e96e5de03b83d920e5e52 ChangeLog 3627
 MD5 f8d3d207746da2a3cd14dcaab8daab76 metadata.xml 163
-MD5 5803d15365a21bbc93276df7349f0fa7 files/digest-phppgadmin-3.1 67
-MD5 7e5bb58cd820dbfbe5175fa75a927ec7 files/digest-phppgadmin-3.3 67
 MD5 f28a73968734ff0fc309cb6a48e5034e files/digest-phppgadmin-3.4 67
 MD5 a6948e041a57a6f252acd7bdb96216ba files/postinstall-en.txt 152
 MD5 e6e21bfe7c5cb376c4b9bdb29a230a52 files/digest-phppgadmin-3.3.1 69
