@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/phppgadmin
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/ChangeLog,v 1.28 2004/07/17 21:57:34 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/ChangeLog,v 1.29 2004/07/18 08:17:57 nakano Exp $
+
+  18 Jul 2004; Masatomo Nakano <nakano@gentoo.org> -phppgadmin-3.1.ebuild,
+  -phppgadmin-3.3.ebuild:
+  Removed old ebuilds.
 
   11 Jul 2004; Jason Wever <weeve@gentoo.org> phppgadmin-3.4.ebuild:
   Stable on sparc.
